# mygeotab-python

./: .flake8  .gitignore  CHANGELOG.rst  Pipfile  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
examples/data_feed/: requirements.txt
mygeotab/: __init__.py  api.py  cli.py  dates.py  exceptions.py  serializers.py
mygeotab/ext/: feed.py
tests/: test_api_async.py  test_api_call.py  test_api_entitylist.py  test_serializers.py
