[tool.poetry]
name = "mygeotab"
version = "0.8.5"
description = "An unofficial Python client for the MyGeotab API"
authors = ["Aaron Toth <atoth89@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/geotab/mygeotab-python"
repository = "https://github.com/geotab/mygeotab-python"
documentation = "https://mygeotab-python.readthedocs.io/"
keywords = ["mygeotab", "geotab", "sdk", "telematics", "truck"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
include = ["CHANGELOG.rst"]

[tool.poetry.dependencies]
python = "^3.6.10"
requests = "^2.23.0"
pytz = "^2019.3"
python-dateutil = "^2.8.1"
aiohttp = "^3.6.2"
python-rapidjson = "^0.9.1"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/geotab/mygeotab-python/issues"
"Community" = "https://community.geotab.com/s/topic/0TO2J000000gAUFWA2/mygeotab-sdk"


[tool.poetry.dev-dependencies]
coverage = "^5.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
rope = "^0.16.0"
mypy = "^0.770"
pytest-asyncio = "^0.11.0"
sphinx = "^3.0.3"
sphinx-rtd-theme = "^0.4.3"
requests-mock = "^1.7.0"
pytest-datadir = "^1.3.1"
pytest-benchmark = "^3.2.3"
bandit = "^1.6.2"
pandas = "^1.0.3"
pytest-monkeytype = "^1.0.5"
black = "^19.10b0"
wheel = "^0.34.2"

[tool.black]
line-length = 120
target_version = ['py27']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"